# blackboard

./: .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  instruction.md  pyproject.toml
config/: system.yaml
config/agent_templates/: config_assistant.md  general.md  host.md  philosopher.md
config/agents/: credentials.enc  registry.yaml
config/permissions/: presets.yaml
config/strategy_templates/: templates.yaml
config/tools/: registry.yaml
dev/: architecture.md  background.md  bugs.md  decisions.md  log.md  logging.md  roadmap.md  rule.md  terms.md  todo.md
dev/rules/: README.md  config.md
dev/test-sample/: sample.md  test_agent_adapter.md  test_conversation_replay.md  test_dynamic_agent.md  test_host_strategy.md  test_im_bridge.md  test_mq_layer.md  test_session_guard.md  test_session_lifecycle.md
src/blackboard/: __init__.py  main.py  models.py
static/css/: animal-island.css
tests/: conftest.py  test_agents.py  test_archive.py  test_config.py  test_credentials.py  test_guard.py  test_host.py  test_logging.py  test_models.py  test_mq.py  test_sandbox.py  test_tools.py
tests/phase1/: conftest.py  test_config.py  test_errors.py  test_models.py  test_mq_layer.py  test_tool_executor.py  test_tool_registry.py
tests/phase2/: test_agent_adapter.py  test_executor_flow.py  test_guard_advanced.py  test_session_manager.py
tests/phase3/: conftest.py  test_api_agents.py  test_api_archive.py  test_api_config.py  test_api_config_extra.py  test_api_config_gaps.py  test_api_messages.py  test_api_permissions.py  test_api_sessions.py  (+4 more)
(+41 files in other folders)
