[project]
name = "blackboard"
version = "0.1.0"
description = "Multi-LLM Agent orchestration framework with Redis Streams"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "redis>=5.2",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "watchfiles>=0.24",
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
